# mcp-examples

./: .env  .gitignore  commits.py  notes_server.py  place_order.py  pyproject.toml  retrieve_prices.py  server.py
github/: pyproject.toml  server.py
notes/fastmcp/: pyproject.toml  server.py
notes/lowlevel/: pyproject.toml
notes/lowlevel/src/notes_mcp_server/: __init__.py  __main__.py  server.py
stock-prices/fastmcp/: server.py
stock-prices/lowlevel/: pyproject.toml
stock-prices/lowlevel/src/stock_prices_mcp/: __init__.py  __main__.py  server.py
